@@ -114,7 +114,7 @@
 	color: #555;
 	font: 11px arial, sans-serif;
 	letter-spacing: normal;
-	margin: 2px 80px 1px 12px;
+	margin: 2px 40px 1px 12px;
 	width: auto;
 }
 
