@@ -33,7 +33,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
-include_once(dirname(__FILE__) . "/httprequest.class.php");
+include_once(dirname(__FILE__) . "/wp_http_request.class.php");
 include_once(dirname(__FILE__) . "/movie.class.php");
 
 # Plugin installation function
